# kvick-db

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
data/: kvick_data.json
src/: CMakeLists.txt  ClusterManager.cpp  ClusterManager.hpp  Hash.hpp  KVick.cpp  KVick.hpp  KVickServer.cpp  KVickServer.hpp  KVickStateMachine.cpp  KVickStateMachine.hpp  KVickStateManager.cpp  RaftManager.cpp  RaftManager.hpp  kvick_internal.proto  main.cpp
src/consensus/: KVickStateMachine.cpp  KVickStateMachine.hpp  KVickStateManager.hpp  RaftManager.cpp  RaftManager.hpp
src/core/: KVick.cpp  KVick.hpp
src/network/: ClusterManager.cpp  ClusterManager.hpp  KVickServer.cpp  KVickServer.hpp  kvick_internal.proto
src/test/: benchmark.cpp  benchmark.py  test-client.py  test-clients.py  test-parellel-req.py
src/utils/: Hash.hpp  JSONSerializer.hpp
